--- a/src/main/webapp/views/anonymous/footer.xhtml
+++ b/src/main/webapp/views/anonymous/footer.xhtml
@@ -17,6 +17,7 @@
 </h:head>
 
 <h:body>
+    <!--Imprssum info -->
     <h1>Impressum</h1>
     <p>
 
@@ -24,8 +25,10 @@
         Uni Passau <br/>
         Innstraße 41 , 94032 Passau
 
-
     </p>
+
+
+    <!--Kontakt info -->
     <h2>Kontakt:</h2>
     <p>
         Telefon: 01234-567890<br/>
