--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -16,7 +16,10 @@
     <title>header</title>
 </h:head>
 
+<!--logo -->
+<h:graphicImage value="src/main/resources/logo/LogoSeite.png" alt="logo" />
 
+<!-- Help link-->
 <a href="help.xhtml">Helfe</a>
 
 <h:body>
