--- a/src/main/webapp/views/anonymous/welcome.xhtml
+++ b/src/main/webapp/views/anonymous/welcome.xhtml
@@ -2,28 +2,26 @@
 <!--
   Created by IntelliJ IDEA.
   User: hadiabouhassoun
-  Date: 07.06.23
-  Time: 13:43
+  Date: 08.06.23
+  Time: 16:14
 -->
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+>
 
 <h:head>
     <title>Welcome Page</title>
 </h:head>
 
 <ui:include src="header.xhtml" />
+
+
+
 ... (content of the page) ...
-
-
-
-
-
-
 
 
 
