--- a/src/main/webapp/views/anonymous/help.xhtml
+++ b/src/main/webapp/views/anonymous/help.xhtml
@@ -10,7 +10,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
     <title>help</title>
@@ -19,5 +19,6 @@
 <h:body>
 
 </h:body>
+
 
 </html>
