--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -8,7 +8,10 @@
 <f:view>
     <h:head>
         <title>Page Title</title>
+
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+
+
     </h:head>
 
     <h:body>
@@ -21,6 +24,7 @@
                 <ul class="navbar-nav">
 
                     <h:form id="navbarForm">
+
 
                         <!--  für anonymous User -->
                         <ul class="navbar-nav" style="display: flex; justify-content: space-between;">
@@ -56,7 +60,7 @@
                                 <h:link outcome="help2" value="Hilfeseite" styleClass="nav-link" />
                             </li>
                             <li class="nav-item">
-                                <h:commandButton action="#{prufungsberichtKommissionBean.createCirculation}" value="Create Circulation" styleClass="nav-link" />
+                                <h:commandButton action="#{circulationCreatingBacking.create}" value="Create Circulation" styleClass="nav-link" />
                             </li>
                         </h:panelGroup>
 
