TrespassListener, UserDAO, HashingTest Add TrespassListener afterPhase() Add HashingTest Implement UserDAO Fix small things in User Add @Inject back to UserDAO

--- a/src/main/webapp/views/authenticated/circulationDetails.xhtml
+++ b/src/main/webapp/views/authenticated/circulationDetails.xhtml
@@ -30,11 +30,11 @@
     </div>
     <div>
         <label for="start-deedlineotxt">Start Deadline:</label>
-        <div id="start-deedlineotxt">#{circulationDetailsBacking.circulation.startDeedline}</div>
+        <div id="start-deedlineotxt">#{circulationDetailsBacking.circulation.startDate}</div>
     </div>
     <div>
         <label for="end-deedlineotxt">End Deadline:</label>
-        <div id="end-deedlineotxt">#{circulationDetailsBacking.circulation.endDeedline}</div>
+        <div id="end-deedlineotxt">#{circulationDetailsBacking.circulation.endDate}</div>
     </div>
     <div>
 
