--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
       xmlns:f="jakarta.faces.core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:ui="jakarta.faces.facelets"
 >
 
 
@@ -12,6 +12,7 @@
 
 <h:body>
     <ui:include src="header.xhtml" />
+
     <h:form id="login-form">
         <h3>Login</h3>
 
