Remove navigation-rule from faces-config.xml Add brackets to the methods in login.xhtml Modify LoginBacking and add logger attribute

--- a/src/main/webapp/views/anonymous/login.xhtml
+++ b/src/main/webapp/views/anonymous/login.xhtml
@@ -33,8 +33,8 @@
         </div>
 
         <div>
-            <h:commandButton value="Login" action="#{loginBacking.login}"/>
-            <h:commandButton value="Register" action="#{loginBacking.register}"/>
+            <h:commandButton value="Login" action="#{loginBacking.login()}"/>
+            <h:commandButton value="Register" action="#{loginBacking.register()}"/>
 
         </div>
     </h:form>
