add maxPages to the Pagination

--- a/src/main/webapp/views/anonymous/header.xhtml
+++ b/src/main/webapp/views/anonymous/header.xhtml
@@ -27,7 +27,7 @@
 
 
                         <!--  für anonymous User -->
-                        <ul class="navbar-nav" style="display: flex; justify-content: space-between;">
+                        <ul class="navbar-nav" style="display: flex; flex-wrap: wrap;">
                             <li class="nav-item" style="list-style-type: none;">
                                 <h:graphicImage value="/logo/LogoSeite.png" style="max-width: 200px; max-height: 200px;" />
                             </li>
