--- a/src/main/webapp/views/authenticated/circulationslist.xhtml
+++ b/src/main/webapp/views/authenticated/circulationslist.xhtml
@@ -3,16 +3,24 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="jakarta.faces.facelets"
+  >
 <f:view>
 
     <h:head>
         <title>circList</title>
+        <link href="#{request.contextPath}src/main/resources/css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"/>
+        <ui:include src="src/main/webapp/views/anonymous/header.xhtml"/>
+
     </h:head>
 
     <h:body>
 
+        <div class="container">
         <h:form>
+
 
             <!---  dataTable for a Circulation List -->
             <h:dataTable value="#{circulationListBacking.circPagination.entries}" var="circulation" styleClass="my-table" border="2" >
@@ -94,14 +102,31 @@
             </h:dataTable>
 
             <!-- Pagination Controls -->
-            <h:panelGroup rendered="#{circulationListBacking.circPagination.maxPerPage>1}" >
-                <h:commandLink value="First" action="#{circulationListBacking.circPagination.firstPage}" />
-                <h:commandLink value="Previous" action="#{circulationListBacking.circPagination.previousPage}" />
-                <h:outputText value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.calculateNumberOfPages()}" />
-                <h:commandLink value="Next" action="#{circulationListBacking.circPagination.nextPage}" />
-                <h:commandLink value="Last" action="#{circulationListBacking.circPagination.lastPage}" />
-            </h:panelGroup>
+            <div class="d-flex justify-content-center">
+                <ul class="pagination">
+                    <h:panelGroup layout="block" styleClass="page-item">
+                        <h:commandLink value="First" action="#{circulationListBacking.circPagination.firstPage}" styleClass="page-link"/>
+                    </h:panelGroup>
+
+                    <h:panelGroup layout="block" styleClass="page-item" rendered="#{!circulationListBacking.circPagination.firstPage()}">
+                        <h:commandLink value="Previous" action="#{circulationListBacking.circPagination.previousPage}" styleClass="page-link" />
+                    </h:panelGroup>
+
+
+                    <h:outputText styleClass="page-item" value="Page : #{circulationListBacking.circPagination.currentPage} of #{circulationListBacking.circPagination.calculateNumberOfPages()}" />
+
+
+                    <h:panelGroup layout="block" styleClass="page-item">
+                        <h:commandLink value="Next" action="#{circulationListBacking.circPagination.nextPage}"
+                                       rendered="#{!circulationListBacking.circPagination.lastPage()}" styleClass="page-link"/>
+                    </h:panelGroup>
+                    <h:panelGroup layout="block" styleClass="page-item">
+                        <h:commandLink value="Last" action="#{circulationListBacking.circPagination.lastPage}" styleClass="page-link"/>
+                    </h:panelGroup>
+                </ul>
+            </div>
         </h:form>
+        </div>
     </h:body>
 </f:view>
 
